# dash-upset

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SURVEY.md  docs.html  example.html  examples.html  explorer.html  index.html  package-lock.json  package.json  pyproject.toml  release-please-config.json  usage.py  webpack.config.js
.claude/: launch.json
.github/workflows/: docs-preview.yml  docs.yml  publish.yml  release-please.yml  test.yml
.scratch/: sv-nav.js  sv-ref.html  sv.css
assets/: explorer.js
dash_upset/: __init__.py  component.py  data.py  figure.py
dash_upset_component/: DashUpset.py  THIRD_PARTY_LICENSES.txt  __init__.py  _imports_.py  dash_upset_component.min.js  metadata.json  package.json
data/: examples.js
docs/: docs.html  example.html  examples.html  explorer.html  index.html  reference.html
docs/assets/: explorer.js  install.js  nav.js  site.css  upset.js
pr-preview/pr-1/assets/: site.css  upset.js
pr-preview/pr-10/: examples.html  explorer.html
pr-preview/pr-11/: reference.html
pr-preview/pr-12/: index.html
pr-preview/pr-12/assets/: nav.js
pr-preview/pr-13/: example.html  examples.html
pr-preview/pr-13/assets/: demo.js
pr-preview/pr-14/: index.html  reference.html
pr-preview/pr-15/: explorer.html  index.html  reference.html
pr-preview/pr-15/assets/: install.js  upset.js
pr-preview/pr-16/: explorer.html  reference.html
pr-preview/pr-16/assets/: explorer.js  upset.js
pr-preview/pr-18/: reference.html
pr-preview/pr-18/assets/: site.webmanifest
pr-preview/pr-20/: explorer.html  index.html
pr-preview/pr-5/: example.html
pr-preview/pr-5/assets/: nav.js
pr-preview/pr-6/: _preview-smoke.md  explorer.html
pr-preview/pr-6/assets/: explorer.js
pr-preview/pr-7/: index.html
pr-preview/pr-8/: explorer.html
scripts/: build_docs_data.py  build_docs_demo.py
src/lib/: index.js
src/lib/components/: DashUpset.react.js
tests/: conftest.py  test_component.py  test_data.py  test_figure.py  test_import.py
